--- a/Kaggle_2sigma/EDA.Rmd
+++ b/Kaggle_2sigma/EDA.Rmd
@@ -7,6 +7,13 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library("tm")
+library("wordcloud")
+library("RColorBrewer")
+library(ggplot2)
+library(ggmap)
+library(plotly)
+library(leaflet)
 ```
 
 This is a document that describes the exploratory analysis of the data provided by 2 sigma for the Kaggle Competetion.
@@ -50,7 +57,237 @@ Looking at the Loaded data, for analysis
 head(train.data,n = 1)
 ```
 
+ Looking at the various details  of the data....
 ```{r}
+nrow(train.data)
+ncol(train.data)
 colnames(train.data)
-summary(train.data)
+#summary(train.data)
 ```
+
+##Extraction of Data of Interest 
+
+
+Getting The Data of interest and looking at the data extracted
+```{r}
+train.doi <- as.data.frame(subset(train.data,select = -c(description,photos)))
+train.doi$interest_level <- as.factor(train.doi$interest_level)
+
+#train.doi$bathrooms <- as.factor(train.doi$bathrooms)
+#train.doi$bedrooms <- as.factor(train.doi$bedrooms)
+#Checking the different levels of the data available 
+#levels(train.doi$bathrooms)
+#levels(train.doi$bedrooms)
+
+View(train.doi)
+
+```
+
+
+##Plots:
+
+
+Plotting the graphs to get a better picture of the data and various varioables involved in the dataset.,
+
+Visualization of the total dataset and different interest levels,
+
+```{r}
+plot_intrst<- ggplot(train.doi,aes(interest_level,color = interest_level,fill=interest_level ))
+
+pi.hist <- plot_intrst+geom_histogram(stat = "count")
+
+pi.hist
+```
+
+For understanding the distribution of the  bedrooms through Violin plots and the jitter plots
+
+Violin Plot:
+
+```{r}
+plot_bed <- ggplot(train.doi,aes(x=interest_level, y=bedrooms,color = interest_level))+labs(title = "Interest level vs Bedrooms",x="Interest Level", y = "# of Bedrooms")
+p.violin<- plot_bed+geom_violin(trim = FALSE)
+p.violin
+```
+
+Jitter Plot:
+
+```{r}
+p.jitter <- plot_bed+geom_jitter(shape=16, position=position_jitter(0.05))
+p.jitter
+```
+
+For understanding the distribution of the  bathrooms through Violin plots and the jitter plots
+
+Violin Plot:
+
+```{r}
+plot_bath <-ggplot(train.doi,aes(x=interest_level, y=bathrooms,color = interest_level))+labs(title = "Interest level vs Bedrooms",x="Interest Level", y = "# of Bedrooms")
+
+pb.violin <- plot_bath+geom_violin(trim = FALSE)
+pb.violin
+```
+
+Jitter Plot:
+
+```{r}
+pb.jitter <- plot_bath+geom_jitter(shape=16, position=position_jitter(0.05))
+pb.jitter
+```
+
+For the analysis of the target variable, `interest_level` in the dataset,
+
+
+```{r}
+#Looking at O/p variable
+unique(train.data$interest_level)
+
+## Maps
+
+
+g <- list(
+        scope = 'usa',
+        projection = list(type = 'albers usa'),
+        showland = TRUE,
+        landcolor = toRGB("gray85"),
+        subunitwidth = 1,
+        countrywidth = 1,
+        subunitcolor = toRGB("white"),
+        countrycolor = toRGB("white")
+)
+
+
+p <- plot_geo(train.doi, locationmode = 'USA-states', sizes = c(20, 250)) %>%
+        add_markers(
+                x = ~longitude, y = ~latitude, size = ~price, color = ~interest_level, hoverinfo = "text",
+                text = ~paste(train.doi$display_address,",", train.doi$street_address, "<br />", train.doi$bedrooms," bed","<br />",train.doi$bathrooms, " bath")
+        ) %>%
+        layout(title = 'Distribution of homes wrt interest level<br>(Click legend to toggle)', geo = g)
+
+p 
+# Commeting the plot as it takes too long to process the info
+#plot_details <- leaflet(train.doi) %>%  addTiles() %>% addMarkers(
+#        clusterOptions = markerOptions(freezeAtZoom = 5)
+#        )%>% 
+#        addMarkers(~longitude, ~latitude, popup = ~paste(train.doi$display_address,",", train.doi$street_address, "<br />", train.doi$bedrooms," #bed","<br />",train.doi$bathrooms, " bath") )
+
+#plot_details
+
+```
+
+
+Now to analyze the features that are listed for a particular datarow for understanding the data wrt features present. For this we create seperate dataframes based on the type of interest level of the customer.
+
+```{r}
+train.doih<- train.doi[train.doi$interest_level =='high',]
+train.doil<- train.doi[train.doi$interest_level =='low',]
+train.doim<- train.doi[train.doi$interest_level =='medium',]
+```
+
+Plotting a WordCloud and the most frequently used words in the dataset, we have
+
+
+```{r}
+#Word Cloud with all data
+train.features <- unlist(train.doi$features,recursive = TRUE,use.names = FALSE)
+train.ft <- as.data.frame(table(train.features))
+names(train.ft) <- c("words","freq")
+train.ft <- train.ft[with(train.ft, order(-freq)), ]
+
+set.seed(1234)
+
+wrd_cld<- wordcloud(words = train.ft$words, freq = train.ft$freq, min.freq = 1,
+          max.words=1000, random.order=FALSE, rot.per=0.35, 
+          colors=brewer.pal(10,"Dark2"))
+wrd_cld
+
+plot_freqwrd<- barplot(train.ft[1:10,]$freq, las = 2, names.arg = train.ft[1:10,]$words,
+        col ="lightblue", main ="Most frequent features",
+        ylab = "Word frequencies")
+
+plot_freqwrd
+
+```
+
+
+
+
+Performing similar analysis for the data for which the interest level is high
+
+
+```{r}
+#Word cloud with interest level as "High"
+
+train.fthigh <- unlist(train.doih$features,recursive = TRUE,use.names = FALSE)
+train.fthigh <- as.data.frame(table(train.fthigh))
+names(train.fthigh) <- c("words","freq")
+train.fthigh <- train.fthigh[with(train.fthigh, order(-freq)), ]
+
+set.seed(1234)
+
+wrd_cld_high<- wordcloud(words = train.fthigh$words, freq = train.fthigh$freq, min.freq = 1,
+                    max.words=1000, random.order=FALSE, rot.per=0.35, 
+                    colors=brewer.pal(10,"Dark2"))
+wrd_cld_high
+
+plot_freqwrdh<- barplot(train.ft[1:10,]$freq, las = 2, names.arg = train.fthigh[1:10,]$words,
+                       col ="lightblue", main ="Most frequent features with intrst level High",
+                       ylab = "Word frequencies")
+
+plot_freqwrdh
+```
+
+
+
+For listing whose innterest level is medium
+
+```{r}
+#Word cloud with interest level as "medium"
+
+train.ftmed <- unlist(train.doim$features,recursive = TRUE,use.names = FALSE)
+train.ftmed <- as.data.frame(table(train.ftmed))
+names(train.ftmed) <- c("words","freq")
+train.ftmed <- train.ftmed[with(train.ftmed, order(-freq)), ]
+
+set.seed(1234)
+
+wrd_cld_med<- wordcloud(words = train.ftmed$words, freq = train.ftmed$freq, min.freq = 1,
+                        max.words=1000, random.order=FALSE, rot.per=0.35, 
+                        colors=brewer.pal(10,"Dark2"))
+wrd_cld_med
+
+plot_freqwrdm<- barplot(train.ft[1:10,]$freq, las = 2, names.arg = train.ftmed[1:10,]$words,
+                        col ="lightblue", main ="Most frequent features in intrst lvl as Medium",
+                        ylab = "Word frequencies")
+
+plot_freqwrdm
+```
+
+
+
+For listings whose interst level is low,
+
+```{r}
+#Word cloud with interest level as "low"
+
+train.ftlow <- unlist(train.doil$features,recursive = TRUE,use.names = FALSE)
+train.ftlow <- as.data.frame(table(train.ftlow))
+names(train.ftlow) <- c("words","freq")
+train.ftlow <- train.ftlow[with(train.ftlow, order(-freq)), ]
+
+set.seed(1234)
+
+wrd_cld_low<- wordcloud(words = train.ftlow$words, freq = train.ftlow$freq, min.freq = 1,
+                        max.words=15000, random.order=FALSE, rot.per=0.35, 
+                        colors=brewer.pal(10,"Dark2"))
+wrd_cld_low
+
+plot_freqwrdl<- barplot(train.ft[1:10,]$freq, las = 2, names.arg = train.ftlow[1:10,]$words,
+                        col ="lightblue", main ="Most frequent features in intrst lvl as low",
+                        ylab = "Word frequencies")
+
+plot_freqwrdl
+
+```
+
+
+ ### To be continued.......
